# agentic-trust-protocol

./: .env.example  .gitignore  AUTHORS.md  CITATION.cff  NEXT_STEPS.md  README.md  STATUS.md  pyproject.toml
docs/: design-brief.md  failure-catalog.md  formal-model.md  literature-map.md  paper2_outline.md  research-brief.md
docs/paper/: draft.md  draft.tex  references.bib
docs/paper/figures/: generate_figures.py
eval/: harness.py  metrics.py
eval/scenarios/: A1_accumulator.yaml  A2_fanout.yaml  A3_compounding.yaml  A4_wrong_vendor_cascade.yaml  B1_stale_date.yaml  B2_wrong_john.yaml  B3_forwarded_auth.yaml  C1_draft_vs_send.yaml  C2_archive_vs_delete.yaml  D1_auto_responder_loop.yaml  adversarial_01_injection.yaml  adversarial_02_urgency.yaml  adversarial_03_chain_error.yaml  adversarial_04_reply_all.yaml  benign_01_reply.yaml  benign_02_forward.yaml  benign_03_schedule.yaml  benign_04_summarize.yaml  edge_01_ambiguous_calendar.yaml  edge_02_draft_vs_send.yaml
scripts/: reproduce_a1.py
src/airlock_agent/: agent.py  checkpoint.py  irreversibility.py  read_path.py  staging.py  trust_budget.py  write_path.py
src/mock_email/: __init__.py  backend.py  fixtures.py  models.py
src/naive_agent/: agent.py  tools.py
src/shared/: __init__.py  llm.py  logging.py
